redaction texte + ajustement css depart

--- a/membre3.html
+++ b/membre3.html
@@ -29,28 +29,57 @@
             <section>
                 <h3>Objectifs</h3>
                 <h4>Court terme (après la formation) </h4>
+                <p>Trouver l'équipe et l'environnement qui me permettra de m'épanouir en tant que dev junior.</p>
                 <h4>Moyen terme (2-5 ans) </h4>
+                <p>Construire une carrière de dev/programmeur qui m'apportera sentiment d'accompaplissement et liberté de lifestyle </p>
                 <h4>Long terme (5-10 ans)</h4>
+                <p>La vie est faite de surprise et d'imprévus, mais le souhait actuel est de me voir conjuguer ma carrtière de dev sénior avec le mentorat ou la consultation professionnelle</p>
                 <h4>Quelles sont vos attentes salariales (faites une recherche sur le salaire moyen du poste et considérez votre expérience)?</h4>
+                <p>Selon mes recherche et en considérant mes compétences passées et mon expérience professionnelle, un salaire de départ raisonnable serait de l'ordre de 60K à 70K annuellement.</p>
             </section>
             <section>
                 <h3>À propos de vous</h3>
                 <h4>Quels sont vos qualités (qu'est-ce que les gens diraient de vous)?</h4>
+                <p>Loyauté, soutien, positivisme, facile d'accès. Mes proches et amis savent qu'ils peuvent compter sur moi pour les aider à solutionner leur defis. En anglais on dirait "very resourceful".</p>
                 <h4>Quel est votre défaut (préférable de savoir, mais nécessaire de le mentionner si on ne vous pose pas la question)?</h4>
+                <p>J'ai une tendance forte à me démontiver rapidement si on ne me fourni pas de défis. La constance devant le travail répétitif devient vite lourd à soutenir pour moi. Je suis à mon meilleur lorqu'on met à profit ma créativité</p>
                 <h4>Comment aimez-vous travaillez en équipe (aire ouverte au bureau, discord à distance)?</h4>
+                <p>Un sage mélange et une bonne circulation des modes de travail sont ce qui me convient le mieux</p>
                 <h4>Quelle est votre motivation à intégrer le domaine?</h4>
+                <p>J'aime coder. J'aime créer avec le code. J'aime solutionner des problèmes à l'aide des outils de prog.</p>
                 <h4>Quels sont vos intérêts/loisirs particuliers?</h4>
+                <ul>
+                    <li>Écouter du Snarky Puppy me fait pleurer de joie.</li>
+                    <li>Neil deGrass Tyson est mon mentor spirituel et scientifique.</li>
+                    <li>Mon prochain drum sera fort probablement un Mapex Armory.</li>
+                    <li>Fans FI-NI de tout ce qui est "The Last of Us", particulierement le grounded mode!</li>
+                    <li>Mon plus jeune de 9 ans veut faire du snowboard comme son papa. ::insert emotions here:: </li>
+                </ul>
+                <p>   </p>
             </section>
             <section>
                 <h3>Expérience avec le poste</h3>
                 <h4>Quels sont les logiciels que vous utilisez/préférez?</h4>
+                <p>A date ?</p>
+                <ul>
+                    <li>VSCode</li>
+                    <li>Linux</li>
+                    
+                </ul>
                 <h4>Quels sont les projets sur lesquels vous avez travaillés?</h4>
+                <p>Mon premier projet autonome professionnel, le site site web du nouveau resto <a href="https://lesenflammes.ca">Les Enflammés</a></p>
+
                 <h4>Quel est le projet dont vous êtes le plus fier (pourquoi, difficultés rencontrées/solutions et exemple)?
                 </h4>
+                <p>Mon premier project exercice avec le cadriciel Laravel. Un simple site d'affichage de banque de films semblable à IMDB. Je l'aime particulièrement pour son design visuel. Il cadre parfaitement dans un design contemporain et de signature pro. L'utilisation de "grid" comme outil de layout ma vraiment plu.</p>
             </section>
             <section>
                 <h3>Expériences additionnelles</h3>
                 <h4>Quelles sont vos qualifications/certifications additionnelles pertinentes</h4>
+                <p>Bac en Art Visuel et design UQO</p>
+                <p>Certficat en démarrage d'entreprise. SAJE Montreal Métro</p>
+                <p>Maîtrise complète de Adobe CC</p>
+                <p>Intérêt additionnel pour la TI</p>
                 <h4>Quels sont vos savoirs-être (ponctualité, organisation, sociabilité, capacité à travailler sous pression/périodes prolongées, service à la clientèle, travail d'équipe, etc.)</h4>
             </section>
         </main>
