deuxième touche header membre3.html

--- a/membre3.html
+++ b/membre3.html
@@ -12,7 +12,7 @@
     
         <header class="membre3">
             <h1>Benoit Chevalier</h1>
-            <h2>Profil (aspirant développeur/designer, front-end, back-end, full-stack)</h2>
+            <h2>Profil ==> Assembleur de casse-tête même si les morceaux ne fittent pas ensemble. </h2>
             <nav>
                 <ul>
                     <li><a href="index.html">ACCUEIL</a></li>
