Corrections sur page html et js, changer meme pour Benoît - Jacqueline

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div id="app">
+      
       <header id="accueil">
         <h1>TP1 - Création d'un profil web</h1>
         <h2>L'équipe <span>ÉLITE</span></h2>
@@ -15,17 +16,19 @@
             <li><a href="index.html" class="actif" @mouseover="changerImage('medias/test.webp')">ACCUEIL</a></li>
             <li><a href="membre1.html" @mouseover="changerImage('medias/test1.webp')">PIER-ALEXANDRE</a></li>
             <li><a href="membre2.html" @mouseover="changerImage('medias/test2.webp')">ALEXANDRE</a></li>
-            <li><a href="membre3.html" @mouseover="changerImage('medias/test3.webp')">BENOÎT</a></li>
+            <li><a href="membre3.html" @mouseover="changerImage('medias/benoit.jpg')">BENOÎT</a></li>
             <li><a href="membre4.html" @mouseover="changerImage('medias/jacqueline.jpg')">JACQUELINE</a></li>
             <li><a href="membre5.html" @mouseover="changerImage('medias/patricia.jpg')">PATRICIA</a></li>
           </ul>
         </nav>
       </header>
+      
       <main>
         <div class="image">
           <img :src="image" alt="">
         </div>
       </main>
+
     </div>
     <script src="js/main.js" type="module"></script>
   </body>
