--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <h2>L'équipe <span>ÉLITE</span></h2>
         <nav>
           <ul>
-            <li><a href="index.html" class="actif" @mouseover="changerImage('medias/test.webp')">ACCUEIL</a></li>
-            <li><a href="membre1.html" @mouseover="changerImage('medias/test1.webp')">PIER-ALEXANDRE</a></li>
-            <li><a href="membre2.html" @mouseover="changerImage('medias/test2.webp')">ALEXANDRE</a></li>
+            <li><a href="index.html" class="actif" @mouseover="changerImage('medias/gab.jpg')">ACCUEIL</a></li>
+            <li><a href="membre1.html" @mouseover="changerImage('medias/pier_alexandre.jpg')">PIER-ALEXANDRE</a></li>
+            <li><a href="membre2.html" @mouseover="changerImage('medias/alexandre.jpg')">ALEXANDRE</a></li>
             <li><a href="membre3.html" @mouseover="changerImage('medias/benoit.jpg')">BENOÎT</a></li>
             <li><a href="membre4.html" @mouseover="changerImage('medias/jacqueline.jpg')">JACQUELINE</a></li>
             <li><a href="membre5.html" @mouseover="changerImage('medias/patricia.jpg')">PATRICIA</a></li>
